# poster_robber

./: .gitignore  pyproject.toml
poster_robber/: __main__.py  api.py
